--- a/www.usps.com/click-n-ship/index.html
+++ b/www.usps.com/click-n-ship/index.html
@@ -1340,11 +1340,11 @@ h4.header-4.announcement{
     <label for="shippingOption">Shipping Method *</label>
 <select id="shippingOption" onchange="savePriceToStorage(this)">
   <option value="">-- Select a shipping method --</option>
-  <option value="8.75" data-name="Priority Mail® Small Flat Rate Envelope">$8.75 - Priority Mail® Small Flat Rate Envelope</option>
-  <option value="8.75" data-name="Priority Mail® Flat Rate Envelope">$8.75 - Priority Mail® Flat Rate Envelope</option>
-  <option value="9.55" data-name="Priority Mail® Padded Flat Rate Envelope">$9.55 - Priority Mail® Padded Flat Rate Envelope</option>
+  <option value="8.75" data-name="Priority Mail® Small Flat Rate Envelope">$8.75 - Priority Mail® Small Flat Rate Box</option>
+  <option value="8.75" data-name="Priority Mail® Flat Rate Envelope">$8.75 - Priority Mail® Flat Rate Box</option>
+  <option value="9.55" data-name="Priority Mail® Padded Flat Rate Envelope">$9.55 - Priority Mail® Padded Flat Rate Box</option>
   <option value="16.65" data-name="Priority Mail® Medium Flat Rate Box">$16.65 - Priority Mail® Medium Flat Rate Box</option>
-  <option value="27.20" data-name="Priority Mail Express® Flat Rate Envelope">$27.20 - Priority Mail Express® Flat Rate Envelope</option>
+  <option value="27.20" data-name="Priority Mail Express® Flat Rate Envelope">$27.20 - Priority Mail Express® Flat Rate Box</option>
 </select>
 
 <script>
